src/modules/physics/vx_touch.h

FFI_EXPORT void process_touch_event(int32_t pointerId, int32_t action,
                                    double x, double y, int64_t timestamp);
FFI_EXPORT double get_native_scroll_delta();
FFI_EXPORT double get_native_velocity();
FFI_EXPORT bool should_trigger_haptic(double currentPixels, double viewportDimension);