lib/Services/native_service_ffi.dart


    calculateSpringForce = _nativeLib.lookup<NativeFunction<CalculateSpringForceC>>('calculate_spring_force').asFunction();
    calculateJigglePhysics = _nativeLib.lookup<NativeFunction<CalculateJigglePhysicsC>>('calculate_jiggle_physics').asFunction();
    fastLerp = _nativeLib.lookup<NativeFunction<FastLerpC>>('fast_lerp').asFunction();
    calculateBufferPriority = _nativeLib.lookup<NativeFunction<CalculateBufferPriorityC>>('calculate_buffer_priority').asFunction();
    nativeOptimizeMemory = _nativeLib.lookup<NativeFunction<NativeOptimizeMemoryC>>('native_optimize_memory').asFunction();
    nativeEncryptData = _nativeLib.lookup<NativeFunction<NativeEncryptDataC>>('native_encrypt_data').asFunction();
    calculateVideoDimensions = _nativeLib.lookup<NativeFunction<CalculateVideoDimensionsC>>('calculate_video_dimensions').asFunction();
    generateMessageHash = _nativeLib.lookup<NativeFunction<GenerateMessageHashC>>('generate_message_hash').asFunction();
    secureChatEncrypt = _nativeLib.lookup<NativeFunction<SecureChatEncryptC>>('secure_chat_encrypt').asFunction();
    calculateSheetEasing = _nativeLib.lookup<NativeFunction<CalculateSheetEasingC>>('calculate_sheet_easing').asFunction();
    calculateLiquidStretch = _nativeLib.lookup<NativeFunction<CalculateLiquidStretchC>>('calculate_liquid_stretch').asFunction();
    calculateMaxPreload = _nativeLib.lookup<NativeFunction<CalculateMaxPreloadC>>('calculate_max_preload').asFunction();
    calculateGridItemSize = _nativeLib.lookup<NativeFunction<CalculateGridItemSizeC>>('calculate_grid_item_size').asFunction();
    shouldTriggerInstantSnap = _nativeLib.lookup<NativeFunction<ShouldTriggerInstantSnapC>>('should_trigger_instant_snap').asFunction();
    applyNativeFilter = _nativeLib.lookup<NativeFunction<ApplyNativeFilterC>>('apply_native_filter').asFunction();
    trimVideo = _nativeLib.lookup<NativeFunction<TrimVideoC>>('trim_video').asFunction();
    processTouchEvent = _nativeLib.lookup<NativeFunction<ProcessTouchEventC>>('process_touch_event').asFunction();
    getNativeScrollDelta = _nativeLib.lookup<NativeFunction<GetNativeScrollDeltaC>>('get_native_scroll_delta').asFunction();
    getNativeScrollDeltaX = _nativeLib.lookup<NativeFunction<GetNativeScrollDeltaXC>>('get_native_scroll_delta_x').asFunction();
    getNativeVelocity = _nativeLib.lookup<NativeFunction<GetNativeVelocityC>>('get_native_velocity').asFunction();
    shouldTriggerHaptic = _nativeLib.lookup<NativeFunction<ShouldTriggerHapticC>>('should_trigger_haptic').asFunction();
    setThreadPriority = _nativeLib.lookup<NativeFunction<SetThreadPriorityC>>('set_thread_priority').asFunction();
    requestTurboBoost = _nativeLib.lookup<NativeFunction<RequestTurboBoostC>>('request_turbo_boost').asFunction();

    createVideoPlayer = _nativeLib.lookup<NativeFunction<CreateVideoPlayerC>>('create_video_player').asFunction();
    disposeVideoPlayer = _nativeLib.lookup<NativeFunction<DisposeVideoPlayerC>>('dispose_video_player').asFunction();
    openVideo = _nativeLib.lookup<NativeFunction<OpenVideoC>>('open_video').asFunction();
    playVideo = _nativeLib.lookup<NativeFunction<PlayVideoC>>('play_video').asFunction();
    pauseVideo = _nativeLib.lookup<NativeFunction<PauseVideoC>>('pause_video').asFunction();
    seekVideo = _nativeLib.lookup<NativeFunction<SeekVideoC>>('seek_video').asFunction();
    getVideoFrame = _nativeLib.lookup<NativeFunction<GetVideoFrameC>>('get_video_frame').asFunction();
    getVideoWidth = _nativeLib.lookup<NativeFunction<GetVideoWidthC>>('get_video_width').asFunction();
    getVideoHeight = _nativeLib.lookup<NativeFunction<GetVideoHeightC>>('get_video_height').asFunction();
    getVideoDuration = _nativeLib.lookup<NativeFunction<GetVideoDurationC>>('get_video_duration').asFunction();
    extractVideoThumbnail = _nativeLib.lookup<NativeFunction<ExtractVideoThumbnailC>>('extract_video_thumbnail').asFunction();
    setCacheDirectory = _nativeLib.lookup<NativeFunction<SetCacheDirectoryC>>('set_cache_directory').asFunction();
  }

  void _bindFallbacks() {
    calculateSpringForce = (d, v, s, dam) => 0.0;
    calculateJigglePhysics = (t, f, a, dec) => 0.0;
    fastLerp = (a, b, t) => a + (b - a) * t;
    calculateBufferPriority = (v, i, c) => 0;
    nativeOptimizeMemory = () {};
    nativeEncryptData = (d, l, k, kl) {};
    calculateVideoDimensions = (vw, vh, cw, ch, ow, oh) {};
    generateMessageHash = (m, t) => 0;
    secureChatEncrypt = (d, l, sk) {};
    calculateSheetEasing = (t, d) => 0.0;
    calculateLiquidStretch = (p, t) => (p / t).clamp(0.0, 1.0);
    calculateMaxPreload = (m, q) => 2;
    calculateGridItemSize = (sw, c, s, ow) {};
    shouldTriggerInstantSnap = (v, d, t) => false;
    applyNativeFilter = (b, w, h, id) {};
    trimVideo = (i, o, s, d) => -1;
    processTouchEvent = (id, a, x, y, t) {};
    getNativeScrollDelta = () => 0.0;
    getNativeScrollDeltaX = () => 0.0;
    getNativeVelocity = () => 0.0;
    shouldTriggerHaptic = (p, v) => false;
    setThreadPriority = (p) {};
    requestTurboBoost = (e) {};
    createVideoPlayer = () => Pointer.fromAddress(0);
    disposeVideoPlayer = (p) {};
    openVideo = (p, u) => false;
    playVideo = (p) {};
    pauseVideo = (p) {};
    seekVideo = (p, t) {};
    getVideoFrame = (p, b, w, h) => false;
    getVideoWidth = (p) => 0;
    getVideoHeight = (p) => 0;
    getVideoDuration = (p) => 0.0;
    extractVideoThumbnail = (p, u, b, w, h, t) => false;
    setCacheDirectory = (p) {};
  }
}

final nativeService = NativeService();
